Tweak CSS to allow text in tables to wrap.
Fix from Pete

--- a/src/_static/css/flamegpu.css
+++ b/src/_static/css/flamegpu.css
@@ -70,3 +70,8 @@ code, kbd, pre, samp {
 .rst-content tt.literal {
     color: #aa0000;
 }
+
+/* Allow text inside long table rows to wrap */
+.wy-table-responsive table td, .wy-table-responsive table th {
+	white-space: normal;
+}
